030-software/fluxcd/apps/storm/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storm
  labels:
    app: storm
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: storm
  template:
    metadata:
      labels:
        app: storm
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: storm
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: storm
      containers:
      - name: storm
        image: ghcr.io/relvacode/storm:v1.3.0
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          capabilities:
            drop:
              - ALL
        ports:
        - name: http
          containerPort: 8221
          protocol: TCP
        startupProbe:
          tcpSocket:
            port: http
        livenessProbe:
          tcpSocket:
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        resources:
          limits:
            memory: 256Mi
          requests:
            cpu: 100m
