030-software/fluxcd/apps/storm/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: storm
spec:
  hostnames:
  - storm.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: storm
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
